bin/tui/src/snapshots/tui__snapshot_tests__snap_browse_mode_active.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ line 45                                                                    │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ line 46                                                                    │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ line 47                                                                    │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ line 48                                                                    │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                "
" ╭User────────────────────────────────────────────────────────────────────────╮ "
" │ line 49                                                                    │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  50 messages waiting — no loop running — waiting for Ctrl+R run                "
"   1. line 0                                                                    "
"   2. line 1                                                                    "
"   3. line 2                                                                    "
"   +47 more                                                                     "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │ss                                                                          │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
