bin/tui/src/snapshots/tui__snapshot_tests__snap_editor_multiline_draft.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: none───────────────────────────────────────────────────────── [idle]  "
"  (no session yet — type the new session name below, Enter confirms)            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │ line one                                                                   │ "
" │line two                                                                    │ "
" │line three                                                                  │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
