bin/tui/src/snapshots/tui__snapshot_tests__snap_long_transcript_scrolled_back.snap
---
source: bin/tui/src/snapshot_tests.rs
expression: out
---
" Session: s1─────────────────────────────────────────────────────────── [idle]  "
" │ message 11                                                                │· "
" ╰───────────────────────────────────────────────────────────────────────────╯· "
"                                                                              · "
" ╭User───────────────────────────────────────────────────────────────────────╮· "
" │ message 12                                                                │· "
" ╰───────────────────────────────────────────────────────────────────────────╯· "
"                                                                              · "
" ╭User───────────────────────────────────────────────────────────────────────╮· "
" │ message 13                                                                │· "
" ╰───────────────────────────────────────────────────────────────────────────╯█ "
"                                                                              █ "
" ╭User───────────────────────────────────────────────────────────────────────╮█ "
" │ message 14                                                                │█ "
" ╰───────────────────────────────────────────────────────────────────────────╯· "
"                                                                              · "
" ╭User───────────────────────────────────────────────────────────────────────╮· "
" │ message 15                                                                │· "
" ╰───────────────────────────────────────────────────────────────────────────╯· "
"                                                                              ▼ "
"  20 messages waiting — no loop running — waiting for Ctrl+R run                "
"   1. message 0                                                                 "
"   2. message 1                                                                 "
"   3. message 2                                                                 "
"   +17 more                                                                     "
" ╭[INSERT]────────────────────────────────────────────────────────────────────╮ "
" │                                                                            │ "
" │                                                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────╯ "
"  q×2 quit · Ctrl+R run · Ctrl+E edit · Enter send · Ctrl-J ⏎ · vim · y/n/e · T "
